Project section and below

--- a/styles/main.css
+++ b/styles/main.css
@@ -4182,7 +4182,7 @@ Created using IcoMoon - icomoon.io
   content: "\ea19";
 }
 
-.now-ui-icons.media-1_camera-compact:before {
+.now-ui-icons.media-1_button-play:before {
   content: "\ea1c";
 }
 
